2007-12-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Command line options -bw and -borderwidth were 
	being mapped to X Resource "borderwidth".  It should be "borderWidth".
	Also remove limitation that maximum linewidth is 4 pixels.

	* share/Makefile.am: Rename Gnuplot.app-defaults to Gnuplot before
	installing it.   Bug #1784379

2007-12-08  Petr Mikulik  <mikulik@physics.muni.cz>

	New options "front" and "back" to "set colorbox" to let the box be
	drawn either after or below the image or surface.

	* src/gadgets.h src/gadgets.c: New "layer" field in color_box_struct.

	* src/graphics.c src/graph3d.c: Draw the colorbox at expected layers.

	* src/save.c src/set.c src/show.c src/tables.h src/tables.c
	docs/gnuplot.doc: The other necessary changes.

2007-12-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/fit.c src/plot2d.c src/plot3d.c
	src/set.c:  Pass a pointer to the current plot header into df_open() so
	that the 'using' options can be parsed in 2D/3D context.  This has the
	side benefit of removing an ugly hack whereby df_current_plot (used by
	the histogram and key title processing) was a global. Now it is static.

2007-12-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/plot3d.c (eval3d_plots get3d_data): Implement taking key entry
	titles from datafile column headers.   'splot <foo> using 1:2:3 title 3'

2007-12-02  Daniel Sebald  <daniel.sebald@ieee.org>

	* configure.in, src/show.c (show_version) NEWS:  Added new feature
	--disable-x11-external. If selected, long versions shows +X11_EXTERNAL.

	* demo/gpdemos.tcl demo/Makefile.am.in: Added a wish/TCL demo that 
	displays gnuplot x11 output embedded in a tcl paneled window. The demo
	includes a minimal file browser that defaults to listing the contents of
	GNUPLOT_LIB.

	* src/gplt_x11.c (prepare_plot): Removed an integer argument that isn't
	necessary anymore after having implemented a linked list approach